syntax = "proto3";

package godiscogs;

option go_package = "github.com/brotherlogic/godiscogs";

message ForSale {
  // The id of the record
  int32 id = 1;

  // The id of the sale
  int32 sale_id = 2;

  // The current price
  int32 sale_price = 3;

  int64 date_posted = 4;
}

message Label {
        // The name of the label
        string name = 1;

        // The catalogue number
        string catno = 2;

  // The id of the label
  int32 id = 3;
}

message Folder {
        //The id number of the folder
        int32 id = 1;

        //The name of the folder
        string name = 2;
}

message Artist {
        // The id number of the artist
        int32 id = 1;

        //The name of the artist
        string name = 2;
}

message Image {
        // The uri to the image
        string uri = 1;

        // The type of image
        string type = 2;
}

message Format {
  // The descriptions of the Format
  repeated string descriptions = 1;

  // The name of the Format
  string name = 2;

  // The number of the format
  string qty = 3;

  // Text associated with the Format
  string text = 4;
}

message Release {
	// The id number of the release
	int32 id = 1;

	// The title of the release
	string title = 2;

  // Artists associated with the release
  repeated Artist artists = 3;

  // The folder in which the record is stored
  int32 folder_id = 4;

  // Images associated with the release
  repeated Image images = 5;

  // The instance id of this release
  int32 instance_id = 6;

  // The labels connected to this release
  repeated Label labels = 7;

  // The number of discs in the release
  int32 format_quantity = 8;

  // The rating given to this release
  int32 rating = 9;

  // The earliest release date of this record
  int64 earliest_release_date = 10;

  // The master ID of this release
  int32 master_id = 11;

  // The release date of this release
  string released = 12;

  // The formats of the release
  repeated Format formats = 13;

  // Is this a gatefold?
  bool gatefold = 14;

  // Is this a boxset
  bool boxset = 15;

  // The tracks for this release
  repeated Track tracklist = 16;

  repeated Note instance_notes = 19;
  string record_condition = 17;
  string sleeve_condition = 18;

  repeated int32 digital_versions = 20;
  repeated int32 other_versions = 21;
}

message Note {
  int32 field_id = 1;
  string value = 2;
}

message Track {
  string position = 1;
  string title = 2;
  string type_ = 3;

  enum TrackType {
    UNKNOWN = 0;
    TRACK = 1;
    HEADING = 2;
  }
  TrackType track_type = 4;
  
  repeated Track sub_tracks = 5;
}


enum SaleState {
  NOT_FOR_SALE = 0;
  FOR_SALE = 1;
  SOLD = 2;
  EXPIRED = 3;
}